@@ -1,5 +1,9 @@
 pipeline {
     agent any
+	
+    environment {
+        MAVEN_OPTS = "--add-opens java.base/java.lang=ALL-UNNAMED"
+    }
 
     tools {
 	maven 'maven 3.9.9'
